--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <form action="" method="get">
         <input> Nombre:
 
-
-        <input type="text">
+        
+        <label for="telefono">Número de teléfono:</label>
+        <input type="tel" name="telefono" id="telefono" placeholder="123 456 789" pattern="[0-9]{3} [0-9]{3} [0-9]{3}" required>
+        <br>
     </form>  
 </body>
 </html>
