--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 <body>
     <h1>Formulario</h1>
     <form action="" method="get">
-        <input> Nombre:
+        <label for="Nombre">Nombre:</label>
+        <input name="Nombre" id="nombre" title="Introduce tu nombre" autocomplete="name"> <br>
+        
+        <label for="Apellidos">Apellidos:</label>
+        <input name="Apellidos" id="apellidos" title="Introduce tus apellidos" autocomplete="apellido"> <br>
 
+        <label for="Fecha"> Fecha: </label>
+        <input type="date" name="Fecha" id="fecha" title="Introduce la fecha">
+        
 
-        <input type="text">
     </form>  
 </body>
 </html>
