cambios buscarVuelos crear infoBilletes cambiar botones submit del  indice anadir foto

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                 </div>
                 <div class="card-body">
                   
-                  <form method="" action="">
+                  <form method="post" action="buscarVuelosIdaYVuelta.html">
                     <div class="form-floating">
                         <input type="text" name="origen" value="" class="form-control mb-3" id="floatingInput" placeholder="Alias" required/>
                         <label for="floatingInput">Origen</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" name="destino" value="" class="form-control" id="floatingPassword" placeholder="Contraseña" required/>
-                        <label for="floatingPassword">Destino</label>
+                        <input type="text" name="destino" value="" class="form-control" id="floatingDestino" placeholder="Contraseña" required/>
+                        <label for="floatingDestino">Destino</label>
                     </div>
                     <div class="form-floating mb-3">
                       <input type="date" name="ida" value="" class="form-control" id="floatingIda" placeholder="Ida" required/>
@@ -86,14 +86,14 @@
                 </div>
                 <div class="card-body">
                   
-                  <form method="POST" action="iniciarSesionServlet">
+                  <form method="post" action="buscarVueloIda.html">
                     <div class="form-floating">
                         <input type="text" name="origen" value="" class="form-control mb-3" id="floatingInput" placeholder="Alias" required/>
                         <label for="floatingInput">Origen</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" name="destino" value="" class="form-control" id="floatingPassword" placeholder="Contraseña" required/>
-                        <label for="floatingPassword">Destino</label>
+                        <input type="text" name="destino" value="" class="form-control" id="floatingDestino" placeholder="Contraseña" required/>
+                        <label for="floatingDestino">Destino</label>
                     </div>
                     <div class="form-floating mb-3">
                       <input type="date" name="ida" value="" class="form-control" id="floatingIda" placeholder="Ida" required/>
