--- a/index.html
+++ b/index.html
@@ -232,7 +232,56 @@
       </section>
 
       <section class="mt-4">
-        
+        <div class="container mb-4">
+          <div class="row align-items-center">
+            <div class="col">
+            </div>
+            <div class="col">
+              <h2 class="text-center" style="color: #000000;">Las mejores ofertas</h2>
+            </div>
+            <div class="col">
+            </div>
+          </div>
+        </div>
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="img/berlin.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-md-block">
+                <h4 style="color: #fff">Berlín desde 350€</h4><br>
+                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="img/london.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-md-block">
+                <h4 style="color: #fff">Londres desde 250€</h4><br>
+                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/newyork.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-md-block">
+                <h4 style="color: #fff">Nueva York desde 900€</h4><br>
+                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </section>
 
     </main>
