--- a/index.html
+++ b/index.html
@@ -285,6 +285,71 @@
         </div>
       </section>
 
+      <section class="mt-4">
+        <div class="container mb-4">
+          <div class="row align-items-center">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+              <h2 class="text-center" style="color: #000000;">Preguntas frecuentes</h2>
+            </div>
+            <div class="col-1">
+            </div>
+          </div>
+        </div>
+
+        <div class="container mb-4">
+          <div class="row align-items-center">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      ¿Cómo encuentramos unos precios de vuelo tan bajos?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Procesamos más de 2 millones de búsquedas de vuelos anualmente y muestra resultados de cientos de aerolíneas y webs de terceros, lo que te permite encontrar una gran variedad de opciones y precios de vuelos. También muestra resultados de más de 2 millones de propiedades, junto con coches de alquiler, paquetes de viajes, actividades y millones de opiniones verificadas, para que los usuarios puedan ver la mayor cantidad de opciones de viaje posible.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Buscamos en más proveedores de vuelos que la competencia?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Sí, tenemos acceso a más datos e información que las agencias de viajes online, y constantemente supera a la competencia en exactitud, en todo el mundo.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      ¿Los precios incluyen tasas e impuestos?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Todos los precios de los vuelos mostrados incluyen tasas e impuestos aplicables; a excepción de tasas opcionales por equipaje facturado, selección de asiento, mascotas, etc. Debes reservar este tipo de extras directamente con la aerolínea. ¿Te gustaría saber qué tipo de tasas podría cobrar la aerolínea? Tasas de aerolíneas.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-1">
+            </div>
+          </div>
+        </div>
+
+
+        
+      </section>
     </main>
 
     <div class="container border-top mt-5">
