--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
               </div>
         
               <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-light me-2">Accede</button>
-                <button type="button" class="btn btn-warning">Regístrate</button>
+                <a href="login.html" class="btn btn-light me-2">Accede</a>
+                <a href="register.html" class="btn btn-warning">Regístrate</a>
               </div>
             </header>
           </div>
@@ -116,12 +116,12 @@
       <section class="mt-4">
         <div class="container mb-4">
           <div class="row align-items-center">
-            <div class="col">
+            <div class="col-1">
             </div>
-            <div class="col">
+            <div class="col-10">
               <h2 class="text-center" style="color: #000000;">Ciudades que están de moda</h2>
             </div>
-            <div class="col">
+            <div class="col-1">
             </div>
           </div>
         </div>
@@ -346,9 +346,6 @@
             </div>
           </div>
         </div>
-
-
-        
       </section>
     </main>
 
