--- a/login.html
+++ b/login.html
@@ -10,24 +10,24 @@
     <title>Inicio de sesión</title>
 </head>
 <body>
-    <header class="bg-secondary">
-        <div class="container">
-            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-              <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <img src="img/airplane.png" class="bi me-2" width="40" height="32">
-              </a>
-        
-              <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
-              </div>
-        
-              <div class="col-md-3 text-end">
-                <a href="login.html" class="btn btn-light me-2">Accede</a>
-                <a href="register.html" class="btn btn-warning">Regístrate</a>
-              </div>
-            </header>
-          </div>
-    </header>
+  <div class="bg-secondary">
+    <div class="container">
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+        <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+          <img src="img/airplane.png" class="bi me-2" width="40" height="32">
+        </a>
+  
+        <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+        </div>
+  
+        <div class="col-md-3 text-end">
+          <a href="login.html" class="btn btn-light me-2">Accede</a>
+          <a href="register.html" class="btn btn-warning">Regístrate</a>
+        </div>
+      </header>
+    </div>
+  </div>
 
     <main>
         <div class="container-fluid form-signin text-center vh-100">
