--- a/buscarVuelosIdaYVuelta.html
+++ b/buscarVuelosIdaYVuelta.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styleBuscarVuelos.css">
     <title>buscarVueloIdaYVuelta</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
             <form method="post" action="infoBilletes.html">
                 <article class="mb-3">
                     <div class="row" >
-                        <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG)</h2>
+                        <h2 id="textoIda" class="text-center">Ida Barcelona (BCN) - Lugo(LCG)</h2>
                     </div>
         
                     <section>
@@ -36,10 +37,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 50 </p>
+                                    <p id="duracionVuelo"> 1h 50 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -47,22 +48,22 @@
                                 <input type="radio" name="Ida" id="ida1" value="ida1" required>
                             </div>
                             <div class="col-2">
-                                <h4>06:50 </h4>
+                                <h4 id="salida">06:50 </h4>
                             </div>
                             <div class="col-5 text-center"></div>
                             <div class="col-2">
-                                <h4>8:40</h4>
+                                <h4 id="llegada">8:40</h4>
                             </div>
                             <div class="col-2">
-                                <h5>64.99 EUR</h5>
+                                <h5 id="precio">64.99 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> BCN </p>
+                                    <p id="siglasIda"> BCN </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> LCG </p>
+                                    <p id="siglasVuelta"> LCG </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -74,10 +75,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 50 </p>
+                                    <p id="duracionVuelo"> 1h 50 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -85,23 +86,23 @@
                                 <input type="radio" name="Ida" id="ida2" value="ida2" required>
                             </div>
                             <div class="col-2">
-                                <h4>13:55 </h4>
+                                <h4 id="salida">13:55 </h4>
                             </div>
                             <div class="col-5 ">
                             </div>
                             <div class="col-2">
-                                <h4>15:45</h4>
+                                <h4 id="llegada">15:45</h4>
                             </div>
                             <div class="col-2">
-                                <h5>50.99 EUR</h5>
+                                <h5 id="precio">50.99 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> BCN </p>
+                                    <p id="siglasIda"> BCN </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> LCG </p>
+                                    <p id="siglasVuelta"> LCG </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -113,10 +114,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 50 </p>
+                                    <p id="duracionVuelo"> 1h 50 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -124,24 +125,24 @@
                                 <input type="radio" name="Ida" id="ida3" value="ida3" required>
                             </div>
                             <div class="col-2">
-                                <h4>21:00 </h4>
+                                <h4 id="salida">21:00 </h4>
                             </div>
                             <div class="col-5 ">
                             </div>
     
                             <div class="col-2">
-                                <h4>22:50</h4>
+                                <h4 id="llegada">22:50</h4>
                             </div>
                             <div class="col-2">
-                                <h5>80.99 EUR</h5>
+                                <h5 id="precio">80.99 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> BCN </p>
+                                    <p id="siglasIda"> BCN </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> LCG </p>
+                                    <p id="siglasVuelta"> LCG </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -159,10 +160,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 45 </p>
+                                    <p id="duracionVuelo"> 1h 45 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -170,23 +171,23 @@
                                 <input type="radio" name="Vuelta" id="vuelta1" value="vuelta1" required>
                             </div>
                             <div class="col-2">
-                                <h4>08:10 </h4>
+                                <h4 id="salida">08:10 </h4>
                             </div>
                             <div class="col-5 ">
                             </div>
                             <div class="col-2">
-                                <h4>09:55</h4>
+                                <h4 id="llegada">09:55</h4>
                             </div>
                             <div class="col-2">
-                                <h5>46.49 EUR</h5>
+                                <h5 id="precio">46.49 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> LCG </p>
+                                    <p id="siglasIda"> LCG </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> BCN </p>
+                                    <p id="siglasVuelta"> BCN </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -198,10 +199,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 45 </p>
+                                    <p id="duracionVuelo"> 1h 45 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -209,23 +210,23 @@
                                 <input type="radio" name="Vuelta" id="vuelta2" value="vuelta2" required>
                             </div>
                             <div class="col-2">
-                                <h4>13:55 </h4>
+                                <h4 id="salida">13:55 </h4>
                             </div>
                             <div class="col-5 ">
                             </div>
                             <div class="col-2">
-                                <h4>15:40</h4>
+                                <h4 id="llegada">15:40</h4>
                             </div>
                             <div class="col-2">
-                                <h5>46.49 EUR</h5>
+                                <h5 id="precio">46.49 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> LCG </p>
+                                    <p id="siglasIda"> LCG </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> BCN </p>
+                                    <p id="siglasVuelta"> BCN </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -237,10 +238,10 @@
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> grupo O</p>
+                                    <p id="grupoO"> grupo O</p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> 1h 45 </p>
+                                    <p id="duracionVuelo"> 1h 45 </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -248,23 +249,23 @@
                                 <input type="radio" name="Vuelta" id="vuelta3" value="vuelta3" required>
                             </div>
                             <div class="col-2">
-                                <h4>23:45 </h4>
+                                <h4 id="salida">23:45 </h4>
                             </div>
                             <div class="col-5 ">
                             </div>
                             <div class="col-2">
-                                <h4>01:30</h4>
+                                <h4 id="llegada">01:30</h4>
                             </div>
                             <div class="col-2">
-                                <h5>80.99 EUR</h5>
+                                <h5 id="precio">80.99 EUR</h5>
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-5">
-                                    <p> LCG </p>
+                                    <p id="siglasIda"> LCG </p>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <p> BCN </p>
+                                    <p id="siglasVuelta"> BCN </p>
                                 </div>
                                 <div class="col-1"></div>
                             </div>
@@ -275,7 +276,7 @@
                     <div class="row">
                         <div class="col-4"></div>
                         <div class="col-4 text-center">
-                            <input type="submit" value="Confirmar billetes">                                
+                            <input id="submit" type="submit" value="Confirmar billetes" class="btn btn-warning mb-3">                                
                         </div>
                         <div class="col-4"></div>
                     </div>
@@ -347,7 +348,6 @@
             </div>
         </footer>
       </div>
-
 </body>
 </html>
 
