--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">Tokyo</h5>
-                    <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="vueloIdaTokyo.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">Roma</h5>
-                    <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="vueloIdaRoma.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -169,7 +169,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">París</h5>
-                    <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="vueloIdaYVueltaParis.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -189,7 +189,7 @@
                 <div class="card-body">
                   <p class="card-text mb-1">Vuelos a</p>
                   <h5 class="card-title">Madrid</h5>
-                  <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                  <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <div class="card-body">
                   <p class="card-text mb-1">Vuelos a</p>
                   <h5 class="card-title">Estambul</h5>
-                  <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                  <a href="buscarVuelosIdaYVuelta.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                 </div>
               </div>
             </div>
@@ -221,7 +221,7 @@
                 <div class="card-body">
                   <p class="card-text mb-1">Vuelos a</p>
                   <h5 class="card-title">Budapest</h5>
-                  <a href="" class="btn btn-warning mb-3">Buscar vuelos</a>
+                  <a href="buscarVuelosIdaYVuelta.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                 </div>
               </div>
             </div>
@@ -256,21 +256,21 @@
               <img src="img/berlin.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h4 style="color: #fff">Berlín desde 350€</h4><br>
-                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+                <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Ver oferta</a>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <img src="img/london.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h4 style="color: #fff">Londres desde 250€</h4><br>
-                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+                <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Ver oferta</a>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/newyork.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h4 style="color: #fff">Nueva York desde 900€</h4><br>
-                <a href="" class="btn btn-warning mb-3">Ver oferta</a>
+                <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Ver oferta</a>
               </div>
             </div>
           </div>
