--- a/infoBilletes.html
+++ b/infoBilletes.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="card mx-2 mb-4">
                 <div class="card-header bg-warning text-dark">
-                  <img src="img/silueta.png" class="bi me-2" width="30" height="30"> <h5>Adulto 1</h5>
+                  <h5>Adulto 1</h5>
                 </div>
                 <div class="card-body">
                   
