--- a/infoBilletes.html
+++ b/infoBilletes.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="bg-secondary">
+    <div class="bg-secondary">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
               <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -26,8 +26,8 @@
                 <button type="button" class="btn btn-warning">Regístrate</button>
               </div>
             </header>
-          </div>
-    </header>
+        </div>
+    </div>
 
 
     <main>
