--- a/vueloIdaYVueltaParis.html
+++ b/vueloIdaYVueltaParis.html
@@ -10,7 +10,7 @@
     <title>buscarVueloIdaYVuelta</title>
 </head>
 <body>
-    <header class="bg-secondary">
+    <div class="bg-secondary">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
               <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -21,8 +21,8 @@
                 <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
               </div>
             </header>
-          </div>
-    </header>
+        </div>
+    </div>
 
     <main>
         <div class="container">
