--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-6 col-sm-12">
                     <h1 class="mb-3">Registrarse</h1>
 
-                    <form class="row g-3 needs-validation" novalidate>
+                    <form class="row g-3 needs-validation" method="post" action="" novalidate>
                         <div class="col-md-6">
                             <div class="form-floating">
                                 <input type="text" name="nombre" value="" class="form-control mb-3" id="floatingNombre validationCustom01" placeholder="Nombre" required/>
@@ -56,7 +56,7 @@
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="form-floating">
                                 <input type="email" name="email" value="" class="form-control mb-3" id="floatingEmail validationCustom01" placeholder="Email" required/>
                                 <label for="floatingEmail validateCustom01">Email</label>
@@ -64,18 +64,10 @@
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="password" name="pass" value="" class="form-control mb-3" id="floatingPass1 validationCustom01" placeholder="Contraseña" required/>
+                                <input type="password" name="pass1" value="" class="form-control mb-3" id="floatingPass1 validationCustom01" placeholder="Contraseña" required/>
                                 <label for="floatingPass1 validateCustom01">Contraseña</label>
-                                <div class="valid-feedback">Correcto</div>
-                                <div class="invalid-feedback">Rellene este campo</div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-floating">
-                                <input type="password" name="pass" value="" class="form-control mb-3" id="floatingPass2 validationCustom01" placeholder="Contraseña" required/>
-                                <label for="floatingPass2 validateCustom01">Repetir Contraseña</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
