--- a/paginaAyuda.html
+++ b/paginaAyuda.html
@@ -44,7 +44,7 @@
       <div class="card-body">
         <h5 class="card-title">Cómo funciona nuestra web</h5>
         <p class="card-text">Explora lo que ofrece nuestra web</p>
-        <a href="#" class="btn btn-warning">Acceder</a>
+        <a href="comoFuncionaNuestraWeb.html" class="btn btn-warning">Acceder</a>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
       <div class="card-body">
         <h5 class="card-title">Configuración de privacidad</h5>
         <p class="card-text">Edita la informacion personal que almacenamos</p>
-        <a href="#" class="btn btn-warning">Acceder</a>
+        <a href="configuracionPrivacidad.html" class="btn btn-warning">Acceder</a>
       </div>
     </div>
   </div>
@@ -64,7 +64,7 @@
       <div class="card-body">
         <h5 class="card-title">Terminos y condiciones</h5>
         <p class="card-text">Consulta los terminos y condiciones de usuario</p>
-        <a href="#" class="btn btn-warning">Acceder</a>
+        <a href="terminosYCondiciones.html" class="btn btn-warning">Acceder</a>
       </div>
     </div>
   </div>
@@ -96,10 +96,10 @@
       <div class="col-xl-3 col-sm-6 mb-2">
         <h5>Ayuda</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+          <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+          <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
         </ul>
       </div>
 
