--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -1,20 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="icon" type="image/x-icon" href="img/airplane.png">
-    <title>Cómo funcionamos</title>
-</head>
-
-
-
-
-
-
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <link rel="icon" type="image/x-icon" href="img/airplane.png">
+        <title>Privacidad</title>
+    </head>
   <body>
     <div class="bg-secondary">
         <div class="container">
@@ -35,37 +29,49 @@
         </div>
     </div>
 
-    <div class="container py-3">
-      <div class="card mb-3" >
-        <div class="row g-0">
-          <div class="col-md">
-            <img src="img/img_equipajedemano.hd_.jpg" class="img-fluid rounded-start" alt="...">
+    <div class="container justify-content-center">
+        <h2 class="text-center py-2" style="color: #000000;">Tu Privacidad es importante para nosotros</h2>
+        <h4 class="border-top text-center py-2">Usted permite:</h4>
+        <div class="container py-1 p-5">
+                <div class="form-check form-switch">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                  </div>
+                  <div class="form-check form-switch">
+                    <label class="form-check-label" for="flexSwitchCheckChecked">Seleccionar anuncios basicos</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"> 
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDisabled">Contenido personalizado</label>
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Perfil y muestra de anuncios personalizados</label>
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Utilizar datos de localizacion geografica precisa</label>
+                  </div>
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
+                  </div>
+                  
+                  <div class="container py-4 p-5">
+                  <input class="btn btn-warning" type="submit" value="Guardar">
+                  <button type="button" class="btn">Cancelar</button>    
+                  </div>
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">¿A qué nos dedicamos?</h5>
-              <p class="card-text">A través de esta Plataforma, prestamos un servicio de búsqueda y comparación de productos y servicios de viajes que son ofrecidos por terceros (Proveedores de Viajes), así como un servicio de mediación en la compra de aquéllos que el Usuario selecciona. “Comprar” en esta Plataforma significa emitir una orden o pedido a nuestra organizacion para la adquisición de productos que son ofrecidos por terceros, implicando una obligación de pago. Cuando compras servicios de viajes a través de esta Plataforma, se formalizan dos relaciones contractuales: (a) un contrato entre usted y el Proveedor de Viajes en relación con la prestación del servicio o servicios de transporte o alojamiento; y (b) un contrato entre usted y nuestra organizacion en relación con la prestación de del servicio de mediación.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="container py-3">
-        <div class="card mb-3" >
-          <div class="row g-0">
-            <div class="col-md">
-              <img src="img/Imagen1ComoFuncionamos.webp" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">El proceso de compra</h5>
-                <p class="card-text">Cuando formalices una compra mediante la pulsación del botón “ACEPTAR Y COMPRAR”, recibirás un correo de confirmación de tu orden o pedido de compra, que contendrá todos los detalles de la misma, como confirmación de que tu orden o pedido ha entrado correctamente en el sistema de tu Proveedor de Viajes y de que tu pago será procesado en breve. Nuestra obligación de procesar tu orden o pedido de compra quedará sujeta a la ejecución del pago en su totalidad. Recibirás un segundo correo confirmando que tu compra se ha procesado con éxito y que tu pago se ha ejecutado en su totalidad, que contendrá el número de billete electrónico ya emitido. En caso que, por alguna razón ajena a nuestra organizacion, tu orden o pedido no pudiera ser procesada, total o parcialmente, te contactaremos a la mayor brevedad.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-
+    </div>
 
     <div class="container border-top mt-5">
         <footer class="py-5">
@@ -83,10 +89,10 @@
             <div class="col-xl-3 col-sm-6 mb-2">
               <h5>Ayuda</h5>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+                <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+                <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+                <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
               </ul>
             </div>
       
@@ -135,4 +141,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
-
