--- a/terminosYCondiciones.html
+++ b/terminosYCondiciones.html
@@ -105,10 +105,10 @@
             <div class="col-xl-3 col-sm-6 mb-2">
               <h5>Ayuda</h5>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+                <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+                <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+                <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
               </ul>
             </div>
       
