--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-floating">
                                 <input type="email" name="email" value="" class="form-control mb-3" id="floatingEmail validationCustom01" placeholder="Email" required/>
                                 <label for="floatingEmail validateCustom01">Email</label>
@@ -64,14 +64,24 @@
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-floating">
                                 <input type="password" name="pass1" value="" class="form-control mb-3" id="floatingPass1 validationCustom01" placeholder="Contraseña" required/>
                                 <label for="floatingPass1 validateCustom01">Contraseña</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
-                        </div>
+                        </div><div class="col-md-4">
+                          <div class="form-floating">
+                              <input type="password" name="pass2" value="" class="form-control mb-3" id="floatingPass2 validationCustom01" placeholder="Repetir Contraseña" required/>
+                              <label for="floatingPass2 validateCustom01">Repetir Contraseña</label>
+                              <div class="valid-feedback">Correcto</div>
+                              <div class="invalid-feedback">Rellene este campo</div>
+                          </div>
+                      </div>
+                      <div class="col-12 text-start">
+                        <p>Todos los campos son requeridos</p>
+                      </div>
                         <div class="col-12">
                           <div class="form-check text-start">
                             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
