login, register,  index logead

--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-3 col-sm-12">
                     <h1 class="mb-3">Iniciar Sesión</h1>
                     
-                    <form method="post" action="">
+                    <form method="post" action="index2.html">
                         <div class="form-floating">
                             <input type="text" name="email" value="" class="form-control mb-3" id="floatingEmail" placeholder="Email" required/>
                             <label for="floatingEmail">Email</label>
