--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-6 col-sm-12">
                     <h1 class="mb-3">Registrarse</h1>
 
-                    <form class="row g-3 needs-validation" method="post" action="" novalidate>
+                    <form class="row g-3 needs-validation" method="post" action="login.html" novalidate>
                         <div class="col-md-6">
                             <div class="form-floating">
                                 <input type="text" name="nombre" value="" class="form-control mb-3" id="floatingNombre validationCustom01" placeholder="Nombre" required/>
