--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -28,7 +28,7 @@
             <form method="post" action="infoBilletes.html">
                 <article class="mb-3">
                     <div class="row" >
-                        <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG)</h2>
+                        <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
                     </div>
         
                     <section>
