--- a/vueloIdaRoma.html
+++ b/vueloIdaRoma.html
@@ -30,7 +30,7 @@
             <form method="post" action="infoBilletes.html">
                 <article class="mb-3">
                     <div class="row" >
-                        <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Roma(ROM)</h2>
+                        <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Roma(ROM) 24/09/2022</h2>
                     </div>
         
                     <section>
