--- a/vueloIdaTokyo.html
+++ b/vueloIdaTokyo.html
@@ -30,7 +30,7 @@
             <form method="post" action="infoBilletes.html">
                 <article class="mb-3">
                     <div class="row" >
-                        <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Tokyo(TOK)</h2>
+                        <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Tokyo(TOK) 03/12/2022</h2>
                     </div>
         
                     <section>
