--- a/paginaAyuda.html
+++ b/paginaAyuda.html
@@ -71,25 +71,16 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
 <div class="container border-top mt-5">
   <footer class="py-5">
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-2">
         <h5>Compañia</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Quiénes somos</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Empleo</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Móvil</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Quiénes somos</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Empleo</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Móvil</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
         </ul>
       </div>
 
@@ -106,10 +97,10 @@
       <div class="col-xl-3 col-sm-12 mb-2">
         <h5>Más</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Aerolinias</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tips</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Aerolinias</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tips</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Blog</a></li>
         </ul>
       </div>
 
@@ -120,7 +111,7 @@
           </div>
           <div class="card-body">
             <p>¿Tienes alguna duda? Contacta con nuestro centro de atención al cliente</p>
-            <button type="button" class="w-100 btn btn-lg btn-warning">Contactar</button>
+            <a href="atencionCliente.html" class="w-100 btn btn-lg btn-warning">Contactar</a>
           </div>
         </div>
       </div>
@@ -130,13 +121,13 @@
       <div class="container">
         <div class="row align-items-start">
           <div class="col-6 justify-content-start">
-            <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22"></p>
+            <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22" alt="Icono de la web representado por un avión de papel"></p>
           </div>
           <div class="col-6">
             <ul class="list-unstyled d-flex justify-content-end">
-              <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-twitter"></i></a></li>
-              <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-instagram"></i></a></li>
-              <li class="ms-3"><a class="link-dark" href="#"><i class="bi bi-facebook"></i></a></li>
+              <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-twitter"></i></a></li>
+              <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-instagram"></i></a></li>
+              <li class="ms-3"><a class="link-dark" href=""><i class="bi bi-facebook"></i></a></li>
             </ul>
           </div>
         </div>
