--- a/seguros.html
+++ b/seguros.html
@@ -57,24 +57,31 @@
                     <div class="card-body">
                       - Contiene asistencia medica en viajes <br>
                       - Cancelacion gratuita <br>
-                      - Indemnizacion por perdida de equipaje o robo <br><br>
+                      - Indemnizacion por perdida de equipaje o robo <br><br><br><br><br>
                       <h3 class="text-center">94,99€</h3> <br>
                       <input type="radio" name="Seguro" id="seguro2" value="seguro2" required>
                     </div>
                   </div>
                 </div>
-                  <div class="col">
-                    <div class="card mx-2 mb-4">
-                      <div class="card-header bg-warning text-dark">
-                        <h5>Seguro Basico</h5>
-                      </div>
-                      <div class="card-body">
-                        - Cancelacion abonando el 50% del billete <br><br>
-                        <h3 class="text-center">Gratuito</h3> <br>
-                        <input type="radio" name="Seguro" id="seguro3" value="seguro3" required>
-                      </div>
+                <div class="col">
+                  <div class="card mx-2 mb-4">
+                    <div class="card-header bg-warning text-dark">
+                      <h5>Seguro Basico</h5>
+                    </div>
+                    <div class="card-body">
+                      - Cancelacion abonando el 50% del billete <br><br><br><br><br><br><br><br>
+                      <h3 class="text-center">Gratuito</h3> <br>
+                      <input type="radio" name="Seguro" id="seguro3" value="seguro3" required>
                     </div>
                   </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+              <div class="col-4"></div>
+              <div class="col-4">
+                <input class="btn btn-warning mb-3" type="submit" value="Confirmar" >
+              </div>
+              <div class="col-4"></div>
             </div>
           </form>
         </div>
