--- a/vueloIdaRoma.html
+++ b/vueloIdaRoma.html
@@ -155,7 +155,7 @@
                         <div class="row">
                             <div class="col-4"></div>
                             <div class="col-4 text-center">
-                                <input id="submit" type="submit" value="Confirmar billetes">                                
+                                <input class="btn btn-warning mb-3" id="submit" type="submit" value="Confirmar billetes">                                
                             </div>
                             <div class="col-4"></div>
                         </div>
