--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="container">
-            <form method="post" action="infoBilletes.html">
+            <form method="post" action="seguros.html">
                 <article class="mb-3">
                     <div class="row" >
                         <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
