--- a/vueloIdaTokyo.html
+++ b/vueloIdaTokyo.html
@@ -27,7 +27,7 @@
 
     <main>
         <div class="container">
-            <form method="post" action="infoBilletes.html">
+            <form method="post" action="seguros.html">
                 <article class="mb-3">
                     <div class="row" >
                         <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Tokyo(TOK) 03/12/2022</h2>
