--- a/vueloIdaYVueltaParis.html
+++ b/vueloIdaYVueltaParis.html
@@ -26,7 +26,7 @@
 
     <main>
         <div class="container">
-            <form method="post" action="infoBilletes.html">
+            <form method="post" action="seguros.html">
                 <article class="mb-3">
                     <div class="row" >
                         <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Paris(PAR) 08/10/2022</h2>
