Informacion de Perfil

--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,9 @@
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <input type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
               </div>
-        
+              
               <div class="col-md-3 text-end">
+                <a href="perfil.html" class="btn btn-warning">Mi perfil</a>
                 <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
               </div>
             </header>
