--- a/perfil.html
+++ b/perfil.html
@@ -34,6 +34,8 @@
               <div class="col">
                 <h2>Foto de perfil</h2>
                 <img src="img/usuario-sin-foto.png" class="img-thumbnail" alt="..." width="400">
+                <p><a href="">Cambiar foto de perfil</a></p>
+                
               </div>
               <div class="col">
                 <h2>Informacion personal</h2>
@@ -41,11 +43,11 @@
   
                     <div class="form-group"> <!-- Full Name -->
                         <label for="full_name_id" class="control-label">Nombre y Apellidos</label>
-                        <input type="text" class="form-control" id="full_name_id" name="full_name" placeholder="Maria Benitez Lopera">
+                        <input type="text" class="form-control" id="full_name_id" name="full_name" placeholder="Carmen Gonzalez Perez">
                     </div>
                     <div class="form-group py-2"> <!-- Full Name -->
                         <label for="full_name_id" class="control-label">Email</label>
-                        <input type="email"class="form-control" id="email_id" name="email" placeholder="mariaBL@hotmail.com"> 
+                        <input type="email"class="form-control" id="email_id" name="email" placeholder="carmen@uma.es"> 
                     </div>
                     
                     <div class="form-group py-2"> <!-- Street 1 -->
