--- a/infoReserva.html
+++ b/infoReserva.html
@@ -40,6 +40,7 @@
 <p class="fs-3"> Horario de salida: 6:50pm.</p>
 <p class="fs-3">Horario de llegada: 8:40pm .</p>
 <p class="fs-2">Numero de Asiento: 11A.</p>
+<p class="fs-3">Tipo de seguro elegido: Seguro medio</p>
  </div>
  </div>
 
