--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <form method="post" action="FAQs.html">
-                  <input id="preguntas" type="search" class="form-control" placeholder="¿Alguna pregunta?" aria-label="Search">
+                    <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" aria-label="Search">
                  </form>
                  <a href="FAQs.html" class="btn btn-light ms-1">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
