--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
             </div>
             <div class="col-6">
               <ul class="list-unstyled d-flex justify-content-end">
-                <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i></a></li>
-                <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i></a></li>
-                <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i></a></li>
+                <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i>Twitter</a></li>
+                <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i>Instagram</a></li>
+                <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i>Facebook</a></li>
               </ul>
             </div>
           </div>
