--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             </div>
             <div class="col-10">
               <h2 id="moda" class="text-center" style="color: #000000;">Ciudades que están de moda</h2>
+              <h3>Hola</h3>
             </div>
             <div class="col-1">
             </div>
@@ -302,6 +303,7 @@
             </div>
             <div class="col">
               <h2 id="ofertas" class="text-center" style="color: #000000;">Las mejores ofertas</h2>
+              <h3>Hola</h3>
             </div>
             <div class="col">
             </div>
