--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <div class="container">
                     <div class="row align-items-center">
                       <div class="col-7">
-                        <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" aria-label="Search">
+                        <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" placeholder="¿Alguna pregunta?" aria-label="Search">
                       </div>
                       <div class="col-5">
                         <button type="submit" class="btn btn-light ms-1">
@@ -344,7 +344,8 @@
             <div class="col-1">
             </div>
             <div class="col-10">
-              <h2 class="text-center mb-4" style="color: #000000;">Preguntas frecuentes</h2>
+              <h2 class="text-center" style="color: #000000;">Preguntas frecuentes</h2>
+              <p class="text-center mb-4">¿En qué podemos ayudarte?</p>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
