--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
     </div>
 </div>
 
-    <main>
+    <main class="mt-5">
         <div class="container-fluid form-signin text-center vh-100">
             <div class="row align-items-center vh-100">
                 <div class="col">
@@ -70,8 +70,8 @@
                     <form class="row g-3 needs-validation" method="post" action="index2.html" novalidate>
                         <div class="col-md-12">
                             <div class="form-floating">
-                                <input type="text" name="nombre" value="" class="form-control mb-1" id="floatingNombre validationCustom01" placeholder="Nombre" required/>
-                                <label for="floatingNombre validateCustom01">Nombre *</label>
+                                <input type="text" name="nombre" value="" class="form-control mb-1" id="floatingNombreValidationCustom01" placeholder="Nombre" required/>
+                                <label for="floatingNombreValidateCustom01">Nombre *</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
