--- a/comoFuncionaNuestraWeb.html
+++ b/comoFuncionaNuestraWeb.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,7 +59,7 @@
     
 
     <main class="py-5">
-      <h1 class="text-center">¿Cómo funciona nuestra web?</h1>
+      <h1 class="text-center mt-5 mb-3">¿Cómo funciona nuestra web?</h1>
         <div class="container py-3">
           <div class="card mb-3" >
             <div class="row g-0">
