añadir tarjeta, editar perfil, perfil completo

--- a/perfilCompleto.html
+++ b/perfilCompleto.html
@@ -78,20 +78,20 @@
           <div class="row align-items-start">
             <div class="col-4 text-center">
               <div class="card" style="width: 18rem;">
-                <img src="img/usuario-sin-foto.png" class="img-thumbnail" alt="Usuario sin imagen. Icono de una persona en color azul">
+                <img src="img/doe.jpg" class="img-thumbnail" alt="Usuario sin imagen. Icono de una persona en color azul">
               </div>
             </div>
             <div class="col-8">
               <div class="row">
                 <h2>Datos personales</h2>
                 <p>
-                  <b>Nombre:</b> <br>
-                  <b>Apellidos:</b> <br>
+                  <b>Nombre:</b> Jhon<br>
+                  <b>Apellidos:</b> Doe<br>
                   <b>Email:</b> jhondoe@gmail.com<br>
-                  <b>Dirección:</b> <br>
-                  <b>Ciudad:</b> <br>
-                  <b>País:</b> <br>
-                  <b>Código postal:</b> <br>
+                  <b>Dirección:</b> Domingo Muñoz<br>
+                  <b>Ciudad:</b> Córdoba<br>
+                  <b>País:</b> España<br>
+                  <b>Código postal:</b> 14001<br>
                 </p>
                 <div class="col">
                   <a href="editarPerfil.html" class="btn btn-warning">Editar perfil</a>
@@ -107,7 +107,7 @@
 
               <h4 class="mt-3">Completa tu perfil editando tus datos y añadiendo una tarjeta</h4>
                 <div class="progress">
-                  <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                  <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                 </div>
             </div>
           </div>
