--- a/FAQs.html
+++ b/FAQs.html
@@ -60,8 +60,21 @@
       </div>
 
 <main class="my-5">
-    <div class="container">
-        <h2 class="text-center" style="color: #000000;">Preguntas frecuentes</h2>
+    <div class="container mt-5">
+      <section class="bg-img pt-5">
+        <div class="container mb-4">
+          <div class="row align-items-center">
+            <div class="col">
+            </div>
+            <div class="col">
+              <h1 class="text-center">Preguntas frecuentes</h1>
+            </div>
+            <div class="col">
+            </div>
+          </div>
+        </div>
+      </section>
+
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
