--- a/reservas.html
+++ b/reservas.html
@@ -59,7 +59,22 @@
     </div>
 
     <main class="my-5">
-      
+      <section class="bg-img pt-5">
+        <div class="container mb-4">
+          <div class="row align-items-center">
+            <div class="col">
+            </div>
+            <div class="col-8">
+              <h1 class="text-center">Reservas</h1>
+            </div>
+            <div class="col">
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
     </main>
 
     <footer class="container border-top mt-5 py-5">
