--- a/reservas.html
+++ b/reservas.html
@@ -13,7 +13,7 @@
     <div class="bg-dark fixed-top">
       <div class="container">
           <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <a href="index3.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
               <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
               <h4 class="text-light">Airplane</h4>
             </a>
@@ -43,15 +43,15 @@
                 Viajar
               </button>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item active" href="index2.html">Buscar vuelo</a></li>
-                <li><a class="dropdown-item" href="index2.html#moda">Ciudades de moda</a></li>
-                <li><a class="dropdown-item" href="index2.html#ofertas">Ofertas</a></li>
+                <li><a class="dropdown-item active" href="index3.html">Buscar vuelo</a></li>
+                <li><a class="dropdown-item" href="index3.html#moda">Ciudades de moda</a></li>
+                <li><a class="dropdown-item" href="index3.html#ofertas">Ofertas</a></li>
               </ul>
             </div>
             
             <div class="col-md-3 text-end">
               <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-              <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
+              <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
               <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
             </div>
           </header>
@@ -59,7 +59,7 @@
     </div>
 
     <main class="my-5">
-      <section class="bg-img pt-5">
+      <section class="pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
             <div class="col">
@@ -73,8 +73,27 @@
         </div>
       </section>
 
+      <section>
+        <div class="row mt-4">
+          <div class="col"></div>
 
+          <div class="col-8">
+            <div class="card ms-1 mb-3">
+              <div class="card-body">
+                <i class="bi bi-arrow-left-right me-5"></i>MADRID-TOKYO<span class="ms-5">Ida: 09/09/2022</span><span class="ms-5">Vuelta: 01/10/2022</span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
+              </div>
+            </div>
+            <div class="card ms-1 mb-3">
+              <div class="card-body">
+                <i class="bi bi-arrow-right me-5"></i>PARÍS<span class="ms-5"></span><span class="ms-4"></span><span class="ms-1"></span><span class="ms-5">Ida: 10/11/2022</span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
+              </div>
+            </div>
+          </div>
 
+          <div class="col"></div>
+          
+        </div>
+      </section>
     </main>
 
     <footer class="container border-top mt-5 py-5">
