--- a/perfil.html
+++ b/perfil.html
@@ -61,7 +61,7 @@
       <section class="bg-img pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
-            <div class="col">
+            <div class="col-6">
             </div>
             <div class="col">
               <h1 class="text-center" style="color: #000000;">Mi perfil</h1>
