--- a/pruebaSeguros(Borrar).html
+++ b/pruebaSeguros(Borrar).html
@@ -53,9 +53,16 @@
   <div class="container">
     <form method="post" action="seguros.html">
         <article class="mb-3">
-            <div class="row" >
-                <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
-            </div>
+          <div class="container mt-5">
+            <section class="bg-img pt-5">
+              <div class="container mb-4">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <h1 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h1>
+                  </div>
+                </div>
+              </div>
+            </section>
             <div class="row">
               <div class="col"></div>
               <div class="col-10">
