--- a/terminosYCondiciones.html
+++ b/terminosYCondiciones.html
@@ -60,7 +60,16 @@
 
   <main class="my-5">
     <div class="container py-3">
-        <h2 class="text-center" style="color: #000000;">Términos y Condiciones</h2>
+      <div class="container mt-5">
+        <section class="bg-img pt-1">
+          <div class="container mb-2">
+            <div class="row align-items-center">
+              <div class="col">
+                <h1 class="text-center">Términos y Condiciones</h1>
+              </div>
+            </div>
+          </div>
+        </section>
         <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
