--- a/buscarVuelosIdaYVuelta.html
+++ b/buscarVuelosIdaYVuelta.html
@@ -63,7 +63,16 @@
             <form method="post" action="seguros.html">
                 <article class="mb-3">
                     <div class="row mb-3" >
-                        <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
+                      <div class="container mt-5">
+                        <section class="bg-img pt-5">
+                          <div class="container mb-4">
+                            <div class="row align-items-center">
+                              <div class="col">
+                                <h1 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h1>
+                              </div>
+                            </div>
+                          </div>
+                        </section>
                     </div>
                     <div class="row">
                       <div class="col"></div>
@@ -201,7 +210,7 @@
                     </div>
 
                     <div class="row mt-5 mb-3" >
-                        <h2 class="text-center">Vuelta Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
+                        <h1 class="text-center">Vuelta Barcelona (BCN) - Lugo(LCG) 05/05/2022</h1>
                     </div>
                     <div class="row">
                       <div class="col"></div>
