--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -60,7 +60,16 @@
 
   <main class="py-5">
     <div class="container justify-content-center">
-        <h2 class="text-center py-2" style="color: #000000;">Tu Privacidad es importante para nosotros</h2>
+      <div class="container mt-5">
+        <section class="bg-img pt-5">
+          <div class="container mb-4">
+            <div class="row align-items-center">
+              <div class="col">
+                <h1 class="text-center">Tu Privacidad es importante para nosotros</h1>
+              </div>
+            </div>
+          </div>
+        </section>
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
                 <div class="form-check form-switch">
