--- a/infoBilletes.html
+++ b/infoBilletes.html
@@ -61,6 +61,9 @@
 
     <main class="my-5">
         <div class="container">
+          <div class="container mt-5">
+            <section class="bg-img pt-5">
+            </section>
             <div class="card mx-2 mb-4">
                 <div class="card-header bg-warning text-dark">
                   <h5>Adulto 1</h5>
