--- a/paginaAyuda.html
+++ b/paginaAyuda.html
@@ -60,6 +60,9 @@
   </div>
 
 <main class="my-5">
+  <div class="row justify-content-center py-3">
+    <div class="col-sm-4">
+    </div>
 <div class="row justify-content-center py-3">
   <div class="col-sm-4">
     <div class="card">
