--- a/vueloIdaTokyo.html
+++ b/vueloIdaTokyo.html
@@ -63,9 +63,16 @@
         <div class="container">
             <form method="post" action="seguros.html">
                 <article class="mb-3">
-                    <div class="row" >
-                        <h2 id="textoIda" class="text-center">Ida Malaga (AGP) - Tokyo(TOK) 03/12/2022</h2>
-                    </div>
+                  <div class="container mt-5">
+                    <section class="bg-img pt-5">
+                      <div class="container mb-4">
+                        <div class="row align-items-center">
+                          <div class="col">
+                            <h1 class="text-center">Ida Malaga (AGP) - Tokyo(TOK) 03/12/2022</h1>
+                          </div>
+                        </div>
+                      </div>
+                    </section>
         
                     <section>
                         <div class="row border" >
