--- a/reservas.html
+++ b/reservas.html
@@ -80,7 +80,7 @@
           <div class="col-8">
             <div class="card ms-1 mb-3">
               <div class="card-body">
-                <i class="bi bi-arrow-left-right me-5"></i>MADRID-TOKYO<span class="ms-5">Ida: 09/09/2022</span><span class="ms-5">Vuelta: 01/10/2022</span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
+                <i class="bi bi-arrow-left-right me-5"></i>MADRID-TOKYO<span class="ms-5">Ida: 09/09/2022</span><span class="ms-5">Vuelta: 01/10/2022</span><span class="ms-5"><a href="billeteIV.html" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
               </div>
             </div>
             <div class="card ms-1 mb-3">
