--- a/index3.html
+++ b/index3.html
@@ -64,7 +64,7 @@
             <div class="col">
             </div>
             <div class="col">
-              <h1 class="text-center" style="color: #000000;">Tu viaje empieza aquí</h1>
+              <h1 class="text-center">Tu viaje empieza aquí</h1>
             </div>
             <div class="col">
             </div>
